<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_DoodleLike_FuchsA_LamkhizniH_IF26</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email">Email :</string>
    <string name="registerMe">Register Me</string>
    <string name="signup">Don\'t have account? Sign Up</string>
    <string name="defaultmsg">Message sent by server will appear here.</string>
    <string name="msg_title">Message</string>
    <string name="user_title">Hello User</string>
    <string name="motdepasse">Mot de passe :</string>
    <string name="valider">Valider</string>
    <string name="creerCompte">Créer compte</string>
    <string name="mdpOublie">Mot de passe oublié</string>
        <string name="ajouter">Ajouter</string>
            <string name="ajouterDate">Ajouter Date</string>
                <string name="ajouterQQun">Ajouter quelqu\'un</string>
                    <string name="creer">Créer</string>
                                        <string name="sujet">Sujet :</string>
                    
                                                            <string name="description">Description :</string>
                                        
                

</resources>