<?xml version="1.0" encoding="utf-8"?>
<controlleur.VerticalScrollview xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Sujet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/sujet"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_editxt"
            android:hint=""
            android:inputType="textPersonName" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_editxt"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>

        <Button
            android:id="@+id/btnChangeDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:text="@string/ajouterDate"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/listView_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>

        <Button
            android:id="@+id/btnInviter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:text="@string/ajouterQQun"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/listView_invites"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

        <Button
            android:id="@+id/validerBouton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/creer" >
        </Button>
    </LinearLayout>

</controlleur.VerticalScrollview>